--- a/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_changestatus.fxml
+++ b/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_changestatus.fxml
@@ -5,22 +5,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_changestatusController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #a1c4fd, #c2e9fb);" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_changestatusController">
    <children>
-      <Label layoutX="116.0" layoutY="100.0" text="当前用户状态：">
+      <Label layoutX="116.0" layoutY="100.0" text="当前用户状态：" textFill="#4609e0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="statustext" layoutX="242.0" layoutY="92.0" prefHeight="39.0" prefWidth="229.0" style="-fx-background-color: #f5ffff; -fx-background-radius: 6px;">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="statustext" layoutX="232.0" layoutY="90.0" prefHeight="39.0" prefWidth="208.0" style="-fx-background-color: #e0f7e4;">
+      <Label layoutX="116.0" layoutY="174.0" text="修改用户状态：" textFill="#4609e0">
          <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="116.0" layoutY="155.0" text="修改用户状态：">
-         <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
       <Button fx:id="lostbtn" layoutX="281.0" layoutY="174.0" mnemonicParsing="false" onAction="#changestatus_lost" prefHeight="39.0" prefWidth="98.0" text="申请挂失" textFill="#987f1a">
@@ -33,7 +32,7 @@
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Button>
-      <Button fx:id="closebtn" layoutX="281.0" layoutY="302.0" mnemonicParsing="false" onAction="#changestatus_close" prefHeight="39.0" prefWidth="98.0" text="销户" textFill="#c92115">
+      <Button fx:id="closebtn" layoutX="281.0" layoutY="302.0" mnemonicParsing="false" onAction="#changestatus_close" prefHeight="39.0" prefWidth="98.0" text="申请销户" textFill="#c92115">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
