--- a/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_ctof.fxml
+++ b/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_ctof.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_ctofController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #a1c4fd, #c2e9fb);" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_ctofController">
    <children>
       <Button fx:id="yesbtn" layoutX="177.0" layoutY="308.0" mnemonicParsing="false" onAction="#ctof_yes" prefHeight="41.0" prefWidth="69.0" text="确认" textFill="#238f15">
          <font>
@@ -46,27 +46,27 @@
             <Font size="14.0" />
          </font>
       </RadioButton>
-      <Label layoutX="106.0" layoutY="209.0" prefHeight="24.0" prefWidth="163.0" text="请输选择定期期限：" textFill="#131386">
+      <Label layoutX="82.0" layoutY="209.0" prefHeight="24.0" prefWidth="163.0" text="请输选择定期期限：" textFill="#131386">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="208.0" layoutY="241.0" prefHeight="24.0" prefWidth="60.0" text="利率：" textFill="#131386">
+      <Label layoutX="188.0" layoutY="241.0" prefHeight="24.0" prefWidth="60.0" text="利率：" textFill="#131386">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="290.0" layoutY="241.0" prefHeight="24.0" prefWidth="48.0" text="1.75%" textFill="#131386">
+      <Label layoutX="299.0" layoutY="241.0" prefHeight="24.0" prefWidth="48.0" text="1.75%" textFill="#131386">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="362.0" layoutY="241.0" prefHeight="24.0" prefWidth="48.0" text="2.75%" textFill="#131386">
+      <Label layoutX="372.0" layoutY="241.0" prefHeight="24.0" prefWidth="48.0" text="2.75%" textFill="#131386">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="440.0" layoutY="241.0" prefHeight="24.0" prefWidth="48.0" text="3.25%" textFill="#131386">
+      <Label layoutX="442.0" layoutY="241.0" prefHeight="24.0" prefWidth="48.0" text="3.25%" textFill="#131386">
          <font>
             <Font size="14.0" />
          </font>
