--- a/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_store.fxml
+++ b/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_store.fxml
@@ -4,8 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_storeController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #a1c4fd, #ffffff);" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_storeController">
    <children>
       <Button fx:id="backbtn" layoutX="25.0" layoutY="23.0" mnemonicParsing="false" onAction="#bankstore_back" prefHeight="30.0" prefWidth="55.0" text="返回">
          <font>
