--- a/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_transaction.fxml
+++ b/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_transaction.fxml
@@ -8,18 +8,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_transactionController">
+<AnchorPane prefHeight="588.0" prefWidth="870.0" style="-fx-background-color: linear-gradient(to bottom, #a1c4fd, #ffffff);" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_transactionController">
    <children>
-      <TableView fx:id="transactionTableView" layoutX="19.0" layoutY="68.0" prefHeight="200.0" prefWidth="600.0">
+      <TableView fx:id="transactionTableView" layoutX="24.0" layoutY="76.0" prefHeight="370.0" prefWidth="821.0" style="-fx-border-color: #5774d4; -fx-border-width: 5px;">
         <columns>
-          <TableColumn fx:id="idColumn" prefWidth="75.0" text="交易记录ID" />
-          <TableColumn fx:id="fromColumn" prefWidth="75.0" text="发起者" />
-            <TableColumn fx:id="toColumn" prefWidth="75.0" text="接收者" />
-            <TableColumn fx:id="amountColumn" prefWidth="75.0" text="金额" />
-            <TableColumn fx:id="typeColumn" prefWidth="75.0" text="交易类型" />
-            <TableColumn fx:id="timeColumn" prefWidth="75.0" text="交易时间" />
-            <TableColumn fx:id="remarkColumn" prefWidth="75.0" text="备注信息" />
-            <TableColumn fx:id="statusColumn" prefWidth="75.0" text="交易状态" />
+          <TableColumn fx:id="idColumn" prefWidth="102.66668701171875" text="交易记录ID" />
+          <TableColumn fx:id="fromColumn" prefWidth="86.0" text="发起者" />
+            <TableColumn fx:id="toColumn" prefWidth="88.0" text="接收者" />
+            <TableColumn fx:id="amountColumn" prefWidth="65.33331298828125" text="金额" />
+            <TableColumn fx:id="typeColumn" prefWidth="116.66668701171875" text="交易类型" />
+            <TableColumn fx:id="timeColumn" prefWidth="108.0" text="交易时间" />
+            <TableColumn fx:id="remarkColumn" prefWidth="156.6666259765625" text="备注信息" />
+            <TableColumn fx:id="statusColumn" prefWidth="89.3333740234375" text="交易状态" />
         </columns>
       </TableView>
       <Button fx:id="backbtn" layoutX="19.0" layoutY="21.0" mnemonicParsing="false" onAction="#transaction_back" prefHeight="29.0" prefWidth="57.0" text="返回">
@@ -32,19 +32,19 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Label layoutX="95.0" layoutY="294.0" text="按时间范围筛查：">
+      <Label layoutX="151.0" layoutY="474.0" style="-fx-background-color: #a1c4fd; -fx-background-radius: 8px;" text="按时间范围筛查：">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="starttext" layoutX="177.0" layoutY="515.0" prefHeight="23.0" prefWidth="166.0" />
+      <TextField fx:id="endtext" layoutX="419.0" layoutY="515.0" prefHeight="23.0" prefWidth="166.0" />
+      <Label layoutX="367.0" layoutY="517.0" text="——">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="starttext" layoutX="160.0" layoutY="324.0" prefHeight="23.0" prefWidth="88.0" />
-      <TextField fx:id="endtext" layoutX="302.0" layoutY="324.0" prefHeight="23.0" prefWidth="88.0" />
-      <Label layoutX="259.0" layoutY="326.0" text="——">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Button fx:id="find" layoutX="420.0" layoutY="321.0" mnemonicParsing="false" onAction="#transaction_find" prefHeight="29.0" prefWidth="57.0" text="搜索" textFill="#0004ff">
+      <Button fx:id="find" layoutX="614.0" layoutY="507.0" mnemonicParsing="false" onAction="#transaction_find" prefHeight="39.0" prefWidth="80.0" style="-fx-background-color: linear-gradient(to bottom, #a1c4fd, #c2e9fb); -fx-background-radius: 8px; -fx-padding: 10 20;" text="搜索" textFill="#0004ff">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
