--- a/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_transfer.fxml
+++ b/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_transfer.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_transferController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #a1c4fd, #c2e9fb);" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_transferController">
    <children>
-      <Label layoutX="85.0" layoutY="36.0" prefHeight="36.0" prefWidth="146.0" text="请输入账户密码：">
+      <Label layoutX="85.0" layoutY="36.0" prefHeight="36.0" prefWidth="146.0" text="请输入账户密码：" textFill="#1c15f4">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -24,7 +24,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Label layoutX="85.0" layoutY="125.0" prefHeight="36.0" prefWidth="146.0" text="请输入取款金额：">
+      <Label layoutX="85.0" layoutY="125.0" prefHeight="36.0" prefWidth="146.0" text="请输入转账金额：" textFill="#1c15f4">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -39,7 +39,7 @@
             <Font size="18.0" />
          </font>
       </PasswordField>
-      <Label layoutX="85.0" layoutY="213.0" prefHeight="36.0" prefWidth="190.0" text="请输入转入账户账号：">
+      <Label layoutX="85.0" layoutY="213.0" prefHeight="36.0" prefWidth="190.0" text="请输入转入账户账号：" textFill="#1c15f4">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
