--- a/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_withdrawal.fxml
+++ b/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank_withdrawal.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_withdrawalController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #a1c4fd, #ffffff);" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.virtualcampus.ui.bank_withdrawalController">
    <children>
-      <Label layoutX="83.0" layoutY="39.0" prefHeight="36.0" prefWidth="146.0" text="请输入账户密码：">
+      <Label layoutX="83.0" layoutY="39.0" prefHeight="36.0" prefWidth="146.0" text="请输入账户密码：" textFill="#4120f8">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -24,7 +24,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Label layoutX="83.0" layoutY="164.0" prefHeight="36.0" prefWidth="146.0" text="请输入取款金额：">
+      <Label layoutX="83.0" layoutY="164.0" prefHeight="36.0" prefWidth="146.0" text="请输入取款金额：" textFill="#4120f8">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
