--- a/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank/bank_service.fxml
+++ b/virtual-campus/src/main/resources/seu/virtualcampus/ui/bank/bank_service.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0"
             prefWidth="600.0"
-            style="-fx-background-color: linear-gradient(to bottom, #a1c4fd, #ffffff);" xmlns="http://javafx.com/javafx/24.0.1"
+            style="-fx-background-color: linear-gradient(to bottom, #a1c4fd, #ffffff);"
+            xmlns="http://javafx.com/javafx/24.0.1"
             fx:controller="seu.virtualcampus.ui.bank.bank_serviceController">
     <children>
         <Button fx:id="accountbtn" layoutX="80.0" layoutY="153.0" mnemonicParsing="false"
@@ -52,14 +53,6 @@
                 onAction="#bankservice_transaction" prefHeight="44.0" prefWidth="100.0"
                 style="-fx-background-color: linear-gradient(to bottom, #4b6cb7, #92c1f6); -fx-background-radius: 8px; -fx-effect: innershadow(gaussian, rgba(255, 255, 255, 0.4), 5, 0.5, 0, 2), /* 顶部高光 */        dropshadow(three-pass-box, rgba(0,0,0,0.5), 6, 0, 0, 1);"
                 text="交易查询" textFill="WHITE">
-            <font>
-                <Font name="System Bold" size="14.0"/>
-            </font>
-        </Button>
-        <Button fx:id="storebtn" layoutX="243.0" layoutY="321.0" mnemonicParsing="false" onAction="#bankservice_store"
-                prefHeight="44.0" prefWidth="116.0"
-                style="-fx-background-color: linear-gradient(to bottom, #4b6cb7, #92c1f6); -fx-background-radius: 8px; -fx-effect: innershadow(gaussian, rgba(255, 255, 255, 0.4), 5, 0.5, 0, 2), /* 顶部高光 */        dropshadow(three-pass-box, rgba(0,0,0,0.5), 6, 0, 0, 1);"
-                text="商店分期功能" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="14.0"/>
             </font>
