--- a/virtual-campus/src/main/resources/seu/virtualcampus/ui/student.fxml
+++ b/virtual-campus/src/main/resources/seu/virtualcampus/ui/student.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<VBox spacing="10" alignment="CENTER" xmlns:fx="http://javafx.com/fxml" fx:controller="seu.virtualcampus.ui.StudentController" style="-fx-font-family: 'Microsoft YaHei';">
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox alignment="CENTER" spacing="10" style="-fx-font-family: 'Microsoft YaHei';" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/24.0.1" fx:controller="seu.virtualcampus.ui.StudentController">
     <Label text="学生信息" />
     <TextField fx:id="nameField" promptText="姓名" />
     <TextField fx:id="majorField" promptText="专业" />
     <TextField fx:id="addressField" promptText="地址" />
     <TextField fx:id="phoneField" promptText="电话" />
-    <Button text="提交修改" onAction="#handleSubmit" />
+    <Button onAction="#handleSubmit" text="提交修改" />
+   <Button fx:id="btLibraryStudent" mnemonicParsing="false" onAction="#onOpenLibraryStudent" text="图书馆" />
     <Label fx:id="msgLabel" textFill="green" />
 </VBox>
