--- a/virtual-campus/src/main/resources/seu/virtualcampus/ui/course/timetable.fxml
+++ b/virtual-campus/src/main/resources/seu/virtualcampus/ui/course/timetable.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
-            fx:controller="seu.virtualcampus.ui.TimetableController">
+            fx:controller="seu.virtualcampus.ui.course.TimetableController">
     <top>
         <HBox spacing="10" style="-fx-background-color: #2c3e50; -fx-padding: 15;">
             <Label text="我的课程表" style="-fx-text-fill: white; -fx-font-size: 20px; -fx-font-weight: bold;"/>
